[project]
name = "clownload"
version = "0.0.4"
description = "download files from clown computers"
authors = [
    { name = "Lawrence D'Anna", email = "larry@elder-gods.org"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dropbox",
    "tenacity"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
homepage = "https://github.com/smoofra/clownload"

[project.scripts]
clownload = "clownload:main"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
